# mcp-service-public-bj

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.release  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
data/registry/: .gitkeep
docs/: developer-guide.md  index.md  release-guide.md
src/server/: __init__.py  bootstrap.py  cli.py  config.py  health.py  live_fetch.py  main.py  metrics.py  models.py  registry.py  schemas.py  search.py  selectors.py  tools.py
src/server/providers/: __init__.py  base.py  finances_bj.py  service_public_bj.py
tests/: test_cli.py  test_finances_provider.py  test_health.py  test_http_e2e.py  test_live_http_e2e.py  test_metrics.py  test_registry.py  test_resilience.py  test_search.py  test_service_public_provider.py  test_stdio_e2e.py  test_tools.py
